# 42-webserv

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  README.md  dockerfile  env.c  makefile  script.js  test.c  test.cgi
.github/workflows/: CI.yml
eval/: README.md  eval.conf
eval/embedded/root/: helloworld.bf  infiniteloop.bf  test.bf
eval/provided/: test_mac.conf
eval/provided/YoupiBanane/: youpi.bad_extension
eval/replace/: replace_text.html
resources/errors/: 400.html  404.html  500.html
resources/example-configs/: basic.conf  cgi.conf
resources/test-root/: .htpasswd  .test.cgi.icloud
resources/uploads/: index.html
src/: main.cpp
src/_includes/config/: ConfigException.hpp  ConfigLine.hpp  ConfigParser.hpp  ParseExceptions.hpp
src/_includes/log/: LogItem.hpp  Logger.hpp
src/_includes/plugins/: BrainfuckExecutor.hpp  JsExecutor.hpp  JsonStatAPI.hpp  PageGenerator.hpp  Plugin.hpp  ReplaceText.hpp
src/_includes/regex/: Regex.hpp
src/_includes/server/: Server.hpp
src/_includes/utils/: AThread.hpp  ArgParser.hpp  CreateMap.hpp  CreateVector.hpp  DataList.hpp  ErrorThrow.hpp  Uri.hpp  base64.hpp  intToString.hpp  isSpace.hpp  localTime.hpp  size_tToString.hpp  stoi.hpp  strdup.hpp  toUpper.hpp
src/config/: AConfigBlock.cpp  AConfigValidator.cpp  ConfigBlock.cpp  ConfigException.cpp  ConfigLine.cpp  ConfigParser.cpp  ConfigValidatorBuilder.cpp
src/config/blocks/: RootBlock.cpp  RouteBlock.cpp  ServerBlock.cpp
src/config/validators/: ArgumentLength.cpp  BooleanValidator.cpp  DomainNameValidator.cpp  DuplicateServerValidator.cpp  ErrorCodeValidator.cpp  FileNameValidator.cpp  HTTPMethodValidator.cpp  (+12 more)
src/env/: ENVBuilder.cpp  env.cpp
src/includes/: LogItem.hpp  Loggable.hpp  Logger.hpp
src/log/: LogItem.cpp  Loggable.cpp  Logger.cpp
src/plugins/: BrainfuckExecutor.cpp  JsExecutor.cpp  JsonStatAPI.cpp  PageGenerator.cpp  Plugin.cpp  ReplaceText.cpp
src/regex/: Regex.cpp
src/rewrite-server/: RewriteServer.cpp  RewriteServer.hpp  RewriteServerTypes.hpp
src/server/: AHandler.cpp  AParser.cpp  Client.cpp  HTTPParser.cpp  Server.cpp  StandardHandler.cpp  TCPListener.cpp  TCPServer.cpp  TerminalClient.cpp  globals.cpp
src/utils/: AThread.cpp  ArgParser.cpp  DataList.cpp  Uri.cpp  atoi.cpp  base64.cpp  countSpaces.cpp  intToString.cpp  isDigit.cpp  isSpace.cpp  itos.cpp  mutex.cpp  size_tToString.cpp  split.cpp  stoh.cpp  stoi.cpp  strdup.cpp  stringIsDouble.cpp  toUpper.cpp
tests/basic/: basic.conf
tests/cgi/: cgi.conf  env-ubuntu.cgi  env.c  env.cgi  mac-env.cgi
tests/config/: unbalanced-brackets-1.conf  unbalanced-brackets-2.conf  unbalanced-brackets-3.conf
tests/embedded/: embedded.conf
tests/js/: js.conf
tests/parser/: index.js  parser.conf
tests/provided/: test.conf  test_mac.conf
tests/proxy/: index.js  proxy-test.js  proxy.conf
unit-tests/datalist/: main.cpp  makefile
(+198 files in other folders)
